--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -4,7 +4,7 @@ description: Numeric keyboard example
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.12.0 <3.0.0"
+  sdk: "^3.0.0"
 
 dependencies:
   flutter:
@@ -12,7 +12,7 @@ dependencies:
   numeric_keyboard:
     path: ../
 
-  cupertino_icons: ^0.1.3
+  cupertino_icons: ^1.0.6
 
 dev_dependencies:
   flutter_test:
