--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,15 +1,16 @@
 name: numeric_keyboard
 description: Flutter plugin to display a simple numeric keyboard on Android & iOS.
-version: 1.1.0
+version: 1.1.1
 homepage: https://github.com/huextrat/numeric_keyboard
 
 environment:
-  sdk: ">=2.12.0 <3.0.0"
+  sdk: "^3.0.0"
 
 dependencies:
   flutter:
     sdk: flutter
 
 dev_dependencies:
+  austerity: ^1.1.0
   flutter_test:
     sdk: flutter
